adding Contact for Contact form

--- a/disneyUniverse.html
+++ b/disneyUniverse.html
@@ -18,6 +18,7 @@
             <li>BEGININGS</li>
             <li>EVOLUTION</li>
             <li>NOWDAYS</li>
+            <li>CONTACT</li>
           </ul>
         </div>
       </div>
