--- a/disneyUniverse.html
+++ b/disneyUniverse.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>disneyUniverse</title>
-    <link rel="stylesheet" href="disnyUniverse.css" />
+    <link rel="stylesheet" href="disneyUniverse.css" />
   </head>
   <body>
-    <header>
-      <h1>DISNEY UNIVERSE</h1>
+    <header id="main-header">
+      <div class="container">
+        <h1>DISNEY UNIVERSE</h1>
+      </div>
     </header>
     <nav>
       <div class="container">
-        <div class="nabar">
+        <div class="navbar">
           <ul>
             <li>BEGININGS</li>
             <li>EVOLUTION</li>
@@ -23,5 +25,25 @@
         </div>
       </div>
     </nav>
+    <section class="showcase">
+      <div class="container">
+        <h1>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, et!
+        </h1>
+      </div>
+    </section>
+    <div class="container">
+      <section class="main">
+        <h1>Welcome</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae,
+          accusantium.
+        </p>
+      </section>
+      <aside id="sidebar">Lorem ipsum dolor sit amet consectetur.</aside>
+    </div>
+    <footer id="main-footer">
+      <p>Copyright &copy; 2023 disneyUniverse</p>
+    </footer>
   </body>
 </html>
