tot trebuie dat push

--- a/disneyUniverse.html
+++ b/disneyUniverse.html
@@ -20,7 +20,9 @@
                   <li>NOWDAYS</li>
                </ul>
             </div>
-            <div class="showcase"></div>
+            <div class="showcase">
+               adica daca dau save nu trebuie sa dau push?
+            </div>
          </div>
       </nav>
    </body>
