--- a/disneyUniverse.html
+++ b/disneyUniverse.html
@@ -20,9 +20,7 @@
                   <li>NOWDAYS</li>
                </ul>
             </div>
-            <div class="showcase">
-               adica daca dau save nu trebuie sa dau push?
-            </div>
+            <div class="showcase"></div>
          </div>
       </nav>
    </body>
