am adaugat 2 linii cu contact

--- a/disneyUniverse.html
+++ b/disneyUniverse.html
@@ -17,10 +17,11 @@
       <div class="container">
         <div class="navbar">
           <ul>
-            <li>BEGININGS</li>
-            <li>EVOLUTION</li>
-            <li>NOWDAYS</li>
-            <li>CONTACT</li>
+            <li><a href="#">BEGININGS</a></li>
+            <li><a href="#">EVOLUTION</a></li>
+            <li><a href="#">NOWDAYS</a></li>
+            <li><a href="#">CONTACT</a></li>
+            <li><a href="#">CONTACT</a></li>
           </ul>
         </div>
       </div>
