--- a/disneyHistory.html
+++ b/disneyHistory.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>disneyUniverse</title>
+    <title>disneyHistory</title>
     <link rel="stylesheet" href="disneyUniverse.css" />
   </head>
   <body>
@@ -17,11 +16,9 @@
       <div class="container">
         <div class="navbar">
           <ul>
-            <li><a href="disneyHistory.html">BEGININGS</a></li>
+            <li><a href="disneyUniverse.html">HOME</a></li>
             <li><a href="#">EVOLUTION</a></li>
             <li><a href="#">NOWDAYS</a></li>
-            <li><a href="#">CONTACT</a></li>
-            <li><a href="#">CONTACT</a></li>
             <li><a href="#">CONTACT</a></li>
           </ul>
         </div>
@@ -34,18 +31,18 @@
         </h1>
       </div>
     </section>
-    <div class="container">
-      <section class="main">
-        <h1>Welcome</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae,
-          accusantium.
-        </p>
-      </section>
-      <aside id="sidebar">Lorem ipsum dolor sit amet consectetur.</aside>
-    </div>
-    <footer id="main-footer">
-      <p>Copyright &copy; 2023 disneyUniverse</p>
-    </footer>
+    <main>
+      <div class="container-grid">
+        <div class="box box1"></div>
+        <div class="box box2"></div>
+        <div class="box box3"></div>
+        <div class="box box4"></div>
+        <div class="box box5"></div>
+        <div class="box box6"></div>
+        <div class="box box7"></div>
+        <div class="box box8"></div>
+        <div class="box box9"></div>
+      </div>
+    </main>
   </body>
 </html>
