Added first 3 charachters

--- a/disneyHistory.html
+++ b/disneyHistory.html
@@ -33,15 +33,65 @@
     </section>
     <main>
       <div class="container-grid">
-        <div class="box box1"></div>
-        <div class="box box2"></div>
-        <div class="box box3"></div>
-        <div class="box box4"></div>
-        <div class="box box5"></div>
-        <div class="box box6"></div>
-        <div class="box box7"></div>
-        <div class="box box8"></div>
-        <div class="box box9"></div>
+        <div class="box box1">
+          <img src="../images/Walt-Disney-Mickey.jpg" alt="Walt-Disney" />
+        </div>
+        <div class="box box2">
+          <h2>Walt Disney American film producer</h2>
+          <p>
+            Walt Disney, in full Walter Elias Disney, (born December 5, 1901,
+            Chicago, Illinois, U.S.—died December 15, 1966, Los Angeles,
+            California), American motion-picture and television producer and
+            showman, famous as a pioneer of animated cartoon films and as the
+            creator of such cartoon characters as Mickey Mouse and Donald Duck.
+            He also planned and built Disneyland, a huge amusement park that
+            opened near Los Angeles in 1955, and before his death he had begun
+            building a second such park, Walt Disney World, near Orlando,
+            Florida. The Disney Company he founded has become one of the world’s
+            largest entertainment conglomerates. In 1927, just before the
+            transition to sound in motion pictures, Disney and Iwerks
+            experimented with a new character—a cheerful, energetic, and
+            mischievous mouse called Mickey. Fully recognizing the possibilities
+            for sound in animated-cartoon films, Disney quickly produced a third
+            Mickey Mouse cartoon equipped with voices and music, entitled
+            Steamboat Willie, and cast aside the other two soundless cartoon
+            films. When it appeared in 1928, Steamboat Willie was a sensation.
+          </p>
+        </div>
+        <div class="box box3">
+          <img src="../images/Walt-Disney-Donald.jpg" alt="Donald" />
+        </div>
+        <div class="box box4">
+          <h2>Donald Duck</h2>
+
+          <p>
+            Donald Duck, an ill-tempered, squawking cartoon duck who was Walt
+            Disney’s second most famous cartoon character after Mickey Mouse and
+            who enjoyed worldwide popularity as the star of animated films,
+            newspaper comic strips, comic books, and television. Donald Duck’s
+            first film appearance was in a supporting role in The Wise Little
+            Hen (1934).
+          </p>
+        </div>
+        <div class="box box5">
+          <img src="../images/Goofy.jpg" alt="Goofy" />
+        </div>
+        <div class="box box6">
+          <h2>Goofy</h2>
+          <p>
+            Goofy is a cartoon character created by The Walt Disney Company
+            Goofy debuted in animated cartoons, starting in 1932 with Mickey's
+            Revue as Dippy Dawg, who is older than Goofy would come to be. Later
+            the same year, he was re-imagined as a younger character, now called
+            Goofy, in the short The Whoopee Party. During the 1930s, he was used
+            extensively as part of a comedy trio with Mickey and Donald.
+            Starting in 1939, Goofy was given his own series of shorts that were
+            popular in the 1940s and early 1950s.
+          </p>
+        </div>
+        <div class="box box7">Box7</div>
+        <div class="box box8">Box8</div>
+        <div class="box box9">Box9</div>
       </div>
     </main>
   </body>
