update home link

--- a/disneyHistory.html
+++ b/disneyHistory.html
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="navbar">
           <ul>
-            <li><a href="disneyUniverse.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="#">EVOLUTION</a></li>
             <li><a href="#">NOWDAYS</a></li>
             <li><a href="#">CONTACT</a></li>
