Added long length cartoons

--- a/disneyHistory.html
+++ b/disneyHistory.html
@@ -89,8 +89,22 @@
             popular in the 1940s and early 1950s.
           </p>
         </div>
-        <div class="box box7">Box7</div>
-        <div class="box box8">Box8</div>
+        <div class="box box7">
+          <img src="../images/Snow-White.jpg" alt="Snow White" />
+        </div>
+        <div class="box box8">
+          <h2>Feature-length cartoons</h2>
+          <p>
+            Walt Disney was never one to rest or stand still. He had long
+            thought of producing feature-length animated films in addition to
+            the shorts. In 1934 he began work on a version of the classic fairy
+            tale Snow White and the Seven Dwarfs (1937). After that he producted
+            Pinocchio (1940), Dumbo (1941), and Bambi (1942). After War World
+            II, The Disney studio also began making full-length animation
+            romances, such as Cinderella (1950), Alice in Wonderland (1951), and
+            Peter Pan (1953)
+          </p>
+        </div>
         <div class="box box9">Box9</div>
       </div>
     </main>
