added banner and text to disneyland

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="navbar">
           <ul>
             <li><a href="disneyHistory.html">BEGININGS</a></li>
+            <li><a href="disneyLand.html">DISNEYLAND</a></li>
             <li><a href="#">EVOLUTION</a></li>
             <li><a href="#">NOWDAYS</a></li>
             <li><a href="#">CONTACT</a></li>
